# HPC

./: Development Notes.md  README.md  ordering memory.md
CPP/: CMakeLists.txt  ForwardEuler.h  Makefile  ReactionDiffusion.cpp  ReactionDiffusion.h  main  main.cpp
CPP/archived/: ReactionDiffusion.cpp
CPP/docs/: Doxyfile
CPP/docs/html/: ReactionDiffusion_8cpp.html  ReactionDiffusion_8cpp__incl.dot  ReactionDiffusion_8h.html  ReactionDiffusion_8h__dep__incl.dot  ReactionDiffusion_8h_source.html  annotated.html  classReactionDiffusion-members.html  classReactionDiffusion.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  main_8cpp.html  main_8cpp__incl.dot  output_8txt.html
CPP/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  files_1.js  files_2.js  functions_0.js  searchdata.js  (+7 more)
CPP/docs/latex/: ReactionDiffusion_8cpp.tex  ReactionDiffusion_8cpp__incl.dot  ReactionDiffusion_8h.tex  ReactionDiffusion_8h__dep__incl.dot  annotated.tex  classReactionDiffusion.tex  files.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  output_8txt.tex  refman.tex
CPP/src/: Archive.txt  ForwardEuler.h  Makefile  Plotter.ipynb  ReactionDiffusion.cpp  ReactionDiffusion.h  main  main.cpp  output.txt  runtime_plot.ipynb  solution.ipynb
CPP/src/archived/: ForwardEuler.cpp  ForwardEuler.h  ReactionDiffusion.h
CPP/src/initial.er/: map.xml  profile
CPP/src/initial1.er/: data.frameinfo  dyntext  log.xml  overview
(+7 files in other folders)
